refactor: Move constructors and drivers components css into reusable classes

--- a/src/assets/scss/_reusable-classes.scss
+++ b/src/assets/scss/_reusable-classes.scss
@@ -13,6 +13,14 @@
     grid-auto-rows: auto;
     &.constructors-drivers {
         gap: 20px;
+        .img-container {
+          width: 45px;
+          height: 45px;
+        }
+
+        span {
+          margin-left: 1rem;
+        }
     }
 }
 
