--- a/src/app/modules/header/components/navigation/navigation.component.html
+++ b/src/app/modules/header/components/navigation/navigation.component.html
@@ -1,23 +1,23 @@
-<nav>
+<nav [ngClass]=" { 'open': isMobileMenuOpen }">
     <ul>
-        <li>
+        <li (click)="isMobileMenuHandler.emit(false)">
           <a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
             <mat-icon>home</mat-icon>
           </a>
         </li>
-        <li>
+        <li (click)="isMobileMenuHandler.emit(false)">
           <a routerLink="/standings" routerLinkActive="active">Standings</a>
         </li>
-        <li>
+        <li (click)="isMobileMenuHandler.emit(false)">
             <a routerLink="/drivers" routerLinkActive="active">Drivers</a>
         </li>
-        <li>
+        <li (click)="isMobileMenuHandler.emit(false)">
             <a routerLink="/constructors" routerLinkActive="active">Constructors</a>
         </li>
-        <li>
+        <li (click)="isMobileMenuHandler.emit(false)">
             <a routerLink="/circuits" routerLinkActive="active">Circuits</a>
         </li>
-        <li>
+        <li (click)="isMobileMenuHandler.emit(false)">
             <a routerLink="/schedule" routerLinkActive="active">Schedule</a>
         </li>
     </ul>
