--- a/src/app/modules/constructors/pages/constructors/constructors.component.html
+++ b/src/app/modules/constructors/pages/constructors/constructors.component.html
@@ -4,10 +4,10 @@
   <section class="grid constructors-drivers">
     <article *ngFor="let details of data" class="box" (click)="router.navigate(['/constructors', details['constructorId']])">
       <section class="image-name-container">
-        <div class="img-container">
-          <img *ngIf="imageExists(details); else noImage" src="assets/images/{{ details['constructorId'] }}.png" [alt]="details['name'] + ' logo'" width="45" height="45" />
+        <div class="img-container_constructors">
+          <img *ngIf="imageExists(details); else noImage" src="assets/images/{{ details['constructorId'] }}.png" [alt]="details['name'] + ' logo'" width="30" height="30" />
           <ng-template #noImage>
-            <img src="/assets/images/no_image_available.jpg" alt="" width="45" height="45">
+            <img src="/assets/images/no_image_available.jpg" alt="" width="30" height="30">
           </ng-template>
         </div>
         <span>{{ details['name'] }}</span>
