--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
 <main>
+    <app-back-forth-buttons></app-back-forth-buttons>
     <section class="max-width pad">
       <router-outlet></router-outlet>
     </section>
