--- a/src/app/modules/back-forth-buttons/back-forth-buttons.component.scss
+++ b/src/app/modules/back-forth-buttons/back-forth-buttons.component.scss
@@ -5,6 +5,10 @@ section {
   padding: 1rem 0;
 }
 
+.mat-raised-button {
+  border-radius: 0;
+}
+
 button:last-of-type {
     margin-left: .5rem;
 }
