--- a/src/assets/scss/_reusable-classes.scss
+++ b/src/assets/scss/_reusable-classes.scss
@@ -78,6 +78,7 @@
         padding: 8px 16px;
         background: $accent;
         border: 1px solid lighten($accent, 10%);
+        border-radius: 0;
     }
     .mat-card-header {
         display: initial;
