fix: Image path

--- a/src/app/modules/header/components/header/header.component.html
+++ b/src/app/modules/header/components/header/header.component.html
@@ -2,7 +2,7 @@
     <mat-toolbar class="max-width" color="primary">
         <mat-toolbar-row>
             <a routerLink="/" matTooltip="Go to home page" matTooltipPosition="right">
-              <img src="/assets/images/f1_logo.png" alt="formula one logo" width="65" height="46">
+              <img src="assets/images/f1_logo.png" alt="formula one logo" width="65" height="46">
             </a>
             <section class="navigation">
               <app-navigation [isMobileMenuOpen]="isMobileMenuOpen" (isMobileMenuHandler)="isMobileMenuOpen = $event"></app-navigation>
