refactor: Add image as html element and not as background

--- a/src/app/shared/modules/page-header/components/page-header/page-header.component.html
+++ b/src/app/shared/modules/page-header/components/page-header/page-header.component.html
@@ -1,9 +1,12 @@
-<h2>
-  {{ title | uppercase }}
-  <span>
-    <ng-content></ng-content>
-  </span>
-</h2>
+<section>
+  <h2>
+    {{ title | uppercase }}
+    <span>
+      <ng-content></ng-content>
+    </span>
+  </h2>
+  <img src="assets/images/f1_racing_car_100.png" alt="">
+</section>
 <section class="road">
   <div></div>
   <div></div>
