--- a/src/app/shared/modules/card/card.component.html
+++ b/src/app/shared/modules/card/card.component.html
@@ -25,12 +25,8 @@
           </ng-container>
         </mat-card-content>
         <mat-card-footer *ngIf="type === 'circuit'">
-          <a [href]="data.url" target="_blank" rel="noreferrer" class="wikipedia-link" mat-mini-fab color="accent" matTooltip="Wikipedia" matTooltipPosition="below">
-            <mat-icon>open_in_new</mat-icon>
-          </a>
-          <button mat-mini-fab color="accent" (click)="showLocation(data.Location.lat, data.Location.long)" matTooltip="View on map" matTooltipPosition="below">
-            <mat-icon>location_searching</mat-icon>
-          </button>
+          <a [href]="data.url" target="_blank" rel="noreferrer" mat-raised-button color="accent" class="mat-elevation-z8">Wikipedia</a>
+          <button mat-raised-button color="accent" class="mat-elevation-z8" (click)="showLocation(data.Location.lat, data.Location.long)">View on map</button>
         </mat-card-footer>
       </mat-card>
 </article>
