--- a/src/app/modules/back-forth-buttons/back-forth-buttons.component.html
+++ b/src/app/modules/back-forth-buttons/back-forth-buttons.component.html
@@ -1,4 +1,4 @@
 <section class="max-width">
-  <button mat-raised-button color="primary" (click)="location.back()">Back</button>
-  <button mat-raised-button color="primary" (click)="location.forward()">Forward</button>
+  <button mat-raised-button color="accent" class="mat-elevation-z24" (click)="location.back()">Back</button>
+  <button mat-raised-button color="accent" class="mat-elevation-z24" (click)="location.forward()">Forward</button>
 </section>
