refactor: Remove statistics from driver-constructor component and delete ngx-echarts package

--- a/src/app/shared/modules/driver-constructor/components/driver-constructor/driver-constructor.component.scss
+++ b/src/app/shared/modules/driver-constructor/components/driver-constructor/driver-constructor.component.scss
@@ -35,6 +35,10 @@ a {
     text-decoration: underline;
 }
 
+.results-header + .grid {
+  margin-bottom: 0;
+}
+
 @media(min-width: 450px) {
   .constructor-info {
     align-items: center;
