refactor: Replace mat spinner with a new loader

--- a/src/app/modules/circuits/pages/circuits/circuits.component.html
+++ b/src/app/modules/circuits/pages/circuits/circuits.component.html
@@ -3,4 +3,4 @@
     <app-card *ngFor="let circuit of circuits"
     [type]="'circuit'" [data]="circuit"></app-card>
 </section>
-<mat-spinner *ngIf="isLoading"></mat-spinner>
+<app-loader *ngIf="isLoading"></app-loader>
