--- a/src/app/modules/drivers/pages/drivers/drivers.component.html
+++ b/src/app/modules/drivers/pages/drivers/drivers.component.html
@@ -16,4 +16,4 @@
     </article>
   </section>
 </ng-container>
-<mat-spinner *ngIf="loading"></mat-spinner>
+<app-loader *ngIf="loading"></app-loader>
