--- a/src/app/modules/standings/components/table/table.component.html
+++ b/src/app/modules/standings/components/table/table.component.html
@@ -51,5 +51,5 @@
             </table>
         </section>
     </ng-container>
-    <mat-spinner *ngIf="isLoading"></mat-spinner>
+    <app-loader *ngIf="isLoading"></app-loader>
 </section>
