refactor: Changes on folder structure

--- a/src/app/shared/modules/page-header/page-header.component.html
+++ b/src/app/shared/modules/page-header/page-header.component.html
@@ -5,7 +5,7 @@
       <ng-content></ng-content>
     </span>
   </h2>
-  <img src="assets/images/f1_racing_car_100.png" alt="">
+  <img src="../../../../assets/images/f1_racing_car_100.png" alt="">
 </section>
 <section class="road">
   <div></div>
