refactor: Abstract class for table

--- a/src/app/modules/standings/pages/standings/standings.component.html
+++ b/src/app/modules/standings/pages/standings/standings.component.html
@@ -2,9 +2,9 @@
 <app-page-header title="standings"></app-page-header>
 <mat-tab-group color="primary" backgroundColor="accent" class="tabs">
   <mat-tab label="Driver">
-    <app-table [option]="'Driver'"></app-table>
+    <app-drivers-table></app-drivers-table>
   </mat-tab>
   <mat-tab label="Constructor">
-    <app-table [option]="'Constructor'"></app-table>
+    <app-constructors-table></app-constructors-table>
   </mat-tab>
 </mat-tab-group>
