--- a/src/app/shared/modules/driver-constructor/driver-constructor.component.scss
+++ b/src/app/shared/modules/driver-constructor/driver-constructor.component.scss
@@ -3,13 +3,18 @@
 h3 {
   margin-left: 1rem;
   margin-bottom: 0;
+  background: $lightAccent;
+  padding: 0.5rem;
   border-left: 2px solid $primary;
 }
 
 h3, h4 {
-    padding: 0.5rem;
-    background: $lightAccent;
-    min-width: 150px;
+  min-width: 150px;
+  padding-bottom: .5rem;
+}
+
+h4 {
+  border-bottom: 2px solid $lightAccent;
 }
 
 .details {
@@ -22,7 +27,7 @@ h3, h4 {
 
 .constructor-info {
   @include flex(row, nowrap, flex-start, flex-start);
-  margin-bottom: 1rem;
+  margin-bottom: 1.5rem;
   color: #62c4ed;
   mat-icon {
     margin-right: .5rem;
@@ -33,10 +38,6 @@ a {
     font-size: 0.9rem;
     color: $white;
     text-decoration: underline;
-}
-
-.results-header + .grid {
-  margin-bottom: 0;
 }
 
 @media(min-width: 450px) {
