--- a/src/assets/scss/_reusable-classes.scss
+++ b/src/assets/scss/_reusable-classes.scss
@@ -67,7 +67,6 @@
     margin-bottom: 2rem;
     & + .grid {
         gap: 60px 20px;
-        margin-bottom: 5rem;
     }
 }
 
@@ -76,8 +75,7 @@
     & > .mat-card {
         height: 100%;
         padding: 8px 16px;
-        background: $accent;
-        border: 1px solid lighten($accent, 10%);
+        background: $lightAccent;
         border-radius: 0;
     }
     .mat-card-header {
