--- a/src/app/modules/footer/footer.component.html
+++ b/src/app/modules/footer/footer.component.html
@@ -1,4 +1,4 @@
 <footer>
-  <mat-icon (click)="goTop()">arrow_upward</mat-icon>
+  <mat-icon (click)="goTop()" matTooltip="Go top" matTooltipPosition="above">arrow_upward</mat-icon>
   <p>Copyright &copy; 2022. All Rights Reserved.</p>
 </footer>
