--- a/src/styles.scss
+++ b/src/styles.scss
@@ -139,6 +139,9 @@ a {
 
 .mat-tooltip {
   font-size: 1rem;
+  background: #1f1f27;
+  border: 1px solid lighten(#1f1f27, 30%);
+  border-radius: 0 !important;
 }
 
 .mat-menu-panel {
