refactor: Change dialog container styles and center align on close button of map

--- a/src/app/modules/circuits/components/circuit-location/circuit-location.component.html
+++ b/src/app/modules/circuits/components/circuit-location/circuit-location.component.html
@@ -2,6 +2,6 @@
 <mat-dialog-content class="mat-typography">
     <app-map [lat]="data.lat" [long]="data.long"></app-map>
 </mat-dialog-content>
-<mat-dialog-actions align="end">
+<mat-dialog-actions align="center">
   <button mat-raised-button mat-dialog-close color="accent">CLOSE</button>
 </mat-dialog-actions>
