--- a/src/app/shared/modules/card/card.component.scss
+++ b/src/app/shared/modules/card/card.component.scss
@@ -10,7 +10,7 @@
   padding: .3rem .5rem;
   margin-left: .5rem;
   color: $white;
-  background: $lightAccent;
+  background: $accent;
 }
 
 .mat-card-footer {
