--- a/src/app/shared/modules/driver-constructor/driver-constructor.component.html
+++ b/src/app/shared/modules/driver-constructor/driver-constructor.component.html
@@ -24,7 +24,7 @@
     <h4 class="results-header">CIRCUIT RESULTS</h4>
     <section class="grid">
         <ng-container *ngFor="let result of results">
-            <app-card [type]="type" [data]="result"></app-card>
+            <app-card [data]="result"></app-card>
         </ng-container>
     </section>
 </article>
