--- a/src/app/modules/schedule/components/schedule-card/schedule-card.component.html
+++ b/src/app/modules/schedule/components/schedule-card/schedule-card.component.html
@@ -2,12 +2,13 @@
   <mat-card>
     <mat-card-header>
       <mat-card-title>
-        {{ race.raceName | uppercase }}
+        <span class="race-round">Round {{ race.round }}</span>
+        <br/>
+        <span>{{ race.raceName | uppercase }}</span>
       </mat-card-title>
-      <mat-card-subtitle class="race-subtitle">Round {{ race.round }}</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
-      <span class="race-date">{{ race.date | date: 'MMM dd' }}</span>
+      <span class="race-date">{{ race.date | date: 'MMM d' }}</span>
       <span *ngIf="race.time" class="race-time">{{ race.time | toLocalTime }}</span>
     </mat-card-content>
   </mat-card>
