--- a/src/app/modules/home/components/placement/placement.component.html
+++ b/src/app/modules/home/components/placement/placement.component.html
@@ -1,5 +1,5 @@
 <p>
   <span>{{ position }}</span>
-  <span>{{ points }}pts</span>
+  <span class="name">{{ name }}</span>
 </p>
-<span class="name">{{ name }}</span>
+<span class="points">{{ points }}pts</span>
