refactor: Button styles

--- a/src/app/components/back-forth-buttons/back-forth-buttons.component.html
+++ b/src/app/components/back-forth-buttons/back-forth-buttons.component.html
@@ -1,4 +1,4 @@
 <section class="max-width">
-  <button mat-raised-button (click)="location.back()">Back</button>
-  <button mat-raised-button (click)="location.forward()">Forward</button>
+  <button (click)="location.back()">Back</button>
+  <button (click)="location.forward()">Forward</button>
 </section>
