--- a/src/app/components/back-forth-buttons/back-forth-buttons.component.scss
+++ b/src/app/components/back-forth-buttons/back-forth-buttons.component.scss
@@ -7,11 +7,14 @@ section {
 
 button {
   width: 80px;
+  padding: 0.6rem 0;
   color: $white;
   background: $lightAccent;
+  border: none;
   border-radius: 20px !important;
   box-shadow: none !important;
   transition: .4s ease-in-out;
+  cursor: pointer;
   &:last-of-type {
     margin-left: .5rem;
   }
