refactor: Remove tooltip from header

--- a/src/app/components/header/components/layout/header.component.html
+++ b/src/app/components/header/components/layout/header.component.html
@@ -1,7 +1,7 @@
 <header>
     <mat-toolbar class="max-width" color="primary">
         <mat-toolbar-row>
-            <a routerLink="/" matTooltip="Go to home page" matTooltipPosition="right">
+            <a routerLink="/">
               <img src="assets/images/f1_logo.png" alt="formula one logo" width="65" height="46">
             </a>
             <section class="navigation">
