--- a/src/styles.scss
+++ b/src/styles.scss
@@ -190,7 +190,7 @@ a {
 }
 
 .mat-dialog-container {
-  padding: 24px 0 !important;
+  padding: 0 !important;
   border-radius: 0 !important;
   overflow-x: hidden !important;
 }
