--- a/src/app/modules/circuits/components/circuit-location/circuit-location.component.html
+++ b/src/app/modules/circuits/components/circuit-location/circuit-location.component.html
@@ -1,7 +1,7 @@
-<h2 mat-dialog-title align="center">{{ data.circuit }}</h2>
+<h2 mat-dialog-title>{{ data.circuit }}</h2>
 <mat-dialog-content class="mat-typography">
     <app-map [lat]="data.lat" [long]="data.long"></app-map>
 </mat-dialog-content>
-<mat-dialog-actions align="center">
-  <button mat-raised-button mat-dialog-close color="accent">CLOSE</button>
-</mat-dialog-actions>
+<button mat-button mat-dialog-close>
+  <mat-icon>close</mat-icon>
+</button>
