refactor: Close button

--- a/src/app/modules/circuits/components/circuit-location/circuit-location.component.html
+++ b/src/app/modules/circuits/components/circuit-location/circuit-location.component.html
@@ -2,6 +2,6 @@
 <mat-dialog-content class="mat-typography">
     <app-map [lat]="data.lat" [long]="data.long"></app-map>
 </mat-dialog-content>
-<button mat-button mat-dialog-close>
+<button mat-icon-button mat-dialog-close>
   <mat-icon>close</mat-icon>
 </button>
