--- a/src/assets/scss/_reusable-classes.scss
+++ b/src/assets/scss/_reusable-classes.scss
@@ -84,27 +84,6 @@
     .mat-card-title {
         padding: 12px 0;
     }
-    .mat-card-subtitle {
-        @include flex(row, nowrap, center, center);
-        position: absolute;
-        top: -10px;
-        right: -10px;
-        width: 30px;
-        height: 30px;
-        color: $white;
-        background: $primary;
-    }
-    p {
-        font-size: 0.9rem;
-        &:not(:last-of-type) {
-            margin-bottom: 0.3rem;
-        }
-    }
-    a {
-        display: inline-block;
-        font-size: 0.9rem;
-        margin-top: 0.3rem;
-    }
 }
 
 .image-name-container {
@@ -114,12 +93,10 @@
     }
 }
 
-.img-container {
-    img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-    }
+.img-container > img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .info {
