--- a/src/app/shared/modules/loader/loader.component.scss
+++ b/src/app/shared/modules/loader/loader.component.scss
@@ -2,31 +2,45 @@
 
 :host {
  @include flex(column, nowrap, center, center);
+  padding-top: 2rem;
 }
 
-.loader > div, span {
+.loader > div {
   animation: fadeIn;
-  animation-duration: .8s;
+  animation-duration: .9s;
   animation-iteration-count: infinite;
   animation-direction: alternate-reverse;
 }
 
 .loader {
-  display: grid;
-  grid-template-columns: repeat(2, 25px);
-  gap: 5px;
-  margin-bottom: 1rem;
+  @include flex(row, nowrap, center, center);
+  margin-bottom: 1.5rem;
+  width: 100%;
   > div {
-    height: 25px;
+    width: 17px;
+    height: 17px;
     background: $primary;
-    &:nth-child(2), &:nth-child(3) {
-      animation-delay: .8s
+    border-radius: 100%;
+    &:not(:first-of-type) {
+      margin-left: 1.5rem;
+    }
+    &:nth-child(2) {
+      animation-delay: .3s;
+    }
+    &:nth-child(3) {
+      animation-delay: .6s;
+    }
+    &:nth-child(4) {
+      animation-delay: .9s;
     }
   }
 }
 
 span {
-  color: darken($white, 30%);
+  font-weight: bold;
+  font-size: 1rem;
+  color: $white;
+  letter-spacing: .2rem;
   animation-delay: 1.6s;
 }
 
@@ -36,11 +50,5 @@ span {
   }
   to {
     opacity: 1;
-  }
-}
-
-@media(min-width: 768px) {
-  span {
-    font-size: 1rem;
   }
 }
