refactor: Apply the correct headings on each page

--- a/src/app/shared/modules/page-header/page-header.component.scss
+++ b/src/app/shared/modules/page-header/page-header.component.scss
@@ -4,9 +4,10 @@ section:first-of-type {
   @include flex(row, nowrap, space-between, center);
 }
 
-h2 {
+h1 {
   @include flex(row, nowrap, flex-start, flex-start);
   font-size: 1.5rem;
+  color: $white;
   margin-bottom: 0;
 }
 
