refactor: Bring back mat-card-subtitle styles and decrease margin left on each div of loader

--- a/src/assets/scss/_reusable-classes.scss
+++ b/src/assets/scss/_reusable-classes.scss
@@ -84,6 +84,16 @@
     .mat-card-title {
         padding: 12px 0;
     }
+    .mat-card-subtitle {
+        @include flex(row, nowrap, center, center);
+        position: absolute;
+        top: -10px;
+        right: -10px;
+        width: 30px;
+        height: 30px;
+        color: $white;
+        background: $primary;
+    }
 }
 
 .image-name-container {
